--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # Allows manual trigger from GitHub Actions tab
+  workflow_dispatch:
 
 jobs:
   build:
@@ -13,10 +13,10 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4  # Updated to v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5  # Updated to v5
       with:
         python-version: '3.11'
     
@@ -24,14 +24,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller
+        # If you have a requirements.txt, add: pip install -r requirements.txt
     
     - name: Build executable
       run: |
         pyinstaller --onefile --noconsole --name "CMiYC" cmiyc.py
     
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  
       with:
         name: CatchMeifYouCan
-        path: dist/cmiyc.exe
-    
+        path: dist/CMiYC.exe  
